cluster/apps/gustindev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gustindev-test
  labels:
    app.kubernetes.io/name: gustindev-test
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gustindev-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gustindev-test
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
