cluster/apps/gustindev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gustindev-test
  labels:
    app.kubernetes.io/name: gustindev-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gustindev-test
