cluster/apps/gustindev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gustindev-external
  namespace: gustindev
  labels:
    app.kubernetes.io/name: gustindev-test
  annotations:
    gethomepage.dev/description: gustin.dev validation endpoint
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: mdi-web
    gethomepage.dev/name: Gustin Dev Validation
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: envoy-gateway
  hostnames:
    - gustin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gustindev-test
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gustindev-internal
  namespace: gustindev
  labels:
    app.kubernetes.io/name: gustindev-test
  annotations:
    gethomepage.dev/description: Internal gustin.dev validation endpoint
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: mdi-web
    gethomepage.dev/name: Gustin Dev Validation (Internal)
    gethomepage.dev/pod-selector: app.kubernetes.io/name=gustindev-test
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - gustindev.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gustindev-test
          port: 80
          weight: 1
