cluster/apps/gustindev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  labels:
    app.kubernetes.io/name: gustindev-test
  annotations:
    kubernetes.io/ingress.class: external
    gethomepage.dev/description: gustin.dev validation endpoint
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: sh-httpbin
    gethomepage.dev/name: Gustin Dev Validation
spec:
  ingressClassName: external
  rules:
    - host: gustin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gustindev-test
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress2
  labels:
    app.kubernetes.io/name: gustindev-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Internal gustin.dev validation endpoint
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: sh-httpbin
    gethomepage.dev/name: Gustin Dev Validation (Internal)
    gethomepage.dev/pod-selector: app.kubernetes.io/name=gustindev-test
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - gustindev.internal.gustend.net
      secretName: gustindev-internal-gustend-net-cert
  rules:
    - host: gustindev.internal.gustend.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gustindev-test
                port:
                  number: 80
